--- a/CSS-Intermediate/Challenge-One/index.html
+++ b/CSS-Intermediate/Challenge-One/index.html
@@ -17,26 +17,26 @@
       </div>
       <div id="content" >
         <h1>Shakespeare's Sonnet #18</h1>
-        <p>This is one of the most famous of the sonnets. It is referenced
+        <p class="par">This is one of the most famous of the sonnets. It is referenced
            in the film Dead Poets Society and gave names to the band The
            Darling Buds and the book and television series The Darling Buds
            of May. Read it and weep!</p>
         <ul>
-          <li>Shall I compare thee to a summer's day?</li>
-          <li>Thou art more lovely and more temperate:</li>
-          <li>Rough winds do shake the darling buds of May,</li>
-          <li>And summer's lease hath all too short a date:</li>
-          <li>Sometime too hot the eye of heaven shines,</li>
-          <li>And often is his gold complexion dimm'd,</li>
-          <li>And every fair from fair sometime declines,</li>
-          <li>By chance, or nature's changing course untrimm'd:</li>
-          <li>But thy eternal summer shall not fade,</li>
-          <li>Nor lose possession of that fair thou ow'st,</li>
-          <li>Nor shall death brag thou wander'st in his shade,</li>
-          <li>When in eternal lines to time thou grow'st,</li>
-          <li>So long as men can breathe, or eyes can see,</li>
-          <li>So long lives this, and this gives life to thee.</li>
-        </ul>
+            <li class="fr">Shall I compare thee to a summer's day?</li>
+            <li class="snd">Thou art more lovely and more temperate:</li>
+            <li class="fth">Rough winds do shake the darling buds of May,</li>
+            <li class="fif">And summer's lease hath all too short a date:</li>
+            <li class="trd">Sometime too hot the eye of heaven shines,</li>
+            <li class="snd">And often is his gold complexion dimm'd,</li>
+            <li class="trd">And every fair from fair sometime declines,</li>
+            <li>By chance, or nature's changing course untrimm'd:</li>
+            <li class="fr">But thy eternal summer shall not fade,</li>
+            <li class="snd">Nor lose possession of that fair thou ow'st,</li>
+            <li class="fth">Nor shall death brag thou wander'st in his shade,</li>
+            <li class="snd">When in eternal lines to time thou grow'st,</li>
+            <li>So long as men can breathe, or eyes can see,</li>
+            <li class="fif">So long lives this, and this gives life to thee.</li>
+          </ul>
 
         <p class="copyright">See the 
         <a href="http://en.wikipedia.org/wiki/Shakespeare%27s_Sonnets">
